dc/s2n-quic-dc/src/snapshots/stream__reader__tests__server_validate_returns_ok_after_external_reset.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=65535
0:00:00.000000000 [main] DEBUG Sent FlowReset stream_id=1 error_code=77 reset_target=Both
0:00:00.000000000 [main] DEBUG event=on_reset prev=PendingValidation next=Reset location=dc/s2n-quic-dc/src/stream/reader.rs
0:00:00.000000000 [main] DEBUG Reader dropping stream_id=1 status=Reset final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
